# Quick-Control

./: .gitignore  AUR-PUBLISH.md  README.md  pyproject.toml
aur/quick-control-git/: .SRCINFO  PKGBUILD
data/: io.github.olalbns.quickcontrol.desktop
quick_control/: __init__.py  app.py  i18n.py  system.py
